fixing the position of the image

--- a/main.css
+++ b/main.css
@@ -231,9 +231,13 @@ footer {
 }
 
 @media (min-width: 1440px) {
-  .logo {
+  header {
     margin-top: auto;
+  }
+
+  .logo {
     margin-bottom: 8.6rem;
+    margin-top: 0;
   }
 
   .main {
