--- a/main.css
+++ b/main.css
@@ -239,7 +239,7 @@ footer {
   color: hsl(228, 45%, 44%);
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 64rem) {
   header {
     margin-top: auto;
   }
